# tue_serialization

./: .travis.yml  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
include/tue/serialization/: archive.h  conversions.h  file.h  filesystem.h  input_archive.h  output_archive.h
src/: conversions.cpp  file.cpp  filesystem.cpp
test/: test_file.cpp  test_serialization.cpp  test_tue_serialization.cpp
